@@ -100,9 +100,6 @@ KNote::KNote( QDomDocument buildDoc, Journal *j, QWidget *parent, const char *na
     m_config( 0 ), m_journal( j ), m_find( 0 ),
     m_kwinConf( KSharedConfig::openConfig( "kwinrc", true ) )
 {
-    // be explicit
-    KWin::setIcons( winId(), qApp->windowIcon().pixmap(IconSize(KIcon::Desktop),IconSize(KIcon::Desktop)), qApp->windowIcon().pixmap(IconSize(KIcon::Small),IconSize(KIcon::Small)) );
-
     setAcceptDrops( true );
     actionCollection()->setWidget( this );
 
@@ -363,6 +360,12 @@ KNote::KNote( QDomDocument buildDoc, Journal *j, QWidget *parent, const char *na
 
     m_readOnly->setChecked( m_config->readOnly() );
     slotUpdateReadOnly();
+
+    // HACK: update the icon color - again after showing the note, to make kicker aware of the new colors
+    KIconEffect effect;
+    QPixmap icon = effect.apply( qApp->windowIcon().pixmap(IconSize(KIcon::Desktop),IconSize(KIcon::Desktop)), KIconEffect::Colorize, 1, m_config->bgColor(), false );
+    QPixmap miniIcon = effect.apply( qApp->windowIcon().pixmap(IconSize(KIcon::Small),IconSize(KIcon::Small)), KIconEffect::Colorize, 1, m_config->bgColor(), false );
+    KWin::setIcons( winId(), icon, miniIcon );
 }
 
 KNote::~KNote()
